istio-mylearning/docker-with-outboundtraffic/mock-api.yml
apiVersion: v1
kind: Service
metadata:
  name: mock-service
  labels:
    app: mock
    service: mock
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: mock
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-v1
  labels:
    app: mock
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock
      version: v1
  template:
    metadata:
      labels:
        app: mock
        version: v1
    spec:
      containers:
      - name: mock
        image: julagantib/mock-api:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
