istio-mylearning/docker-with-outboundtraffic/demo-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
spec:
  hosts:
  - "*"
  gateways:
  - demo-gateway
  http:
  # - match:
  #   - uri:
  #       prefix: /weatherforecast
  #   route:
  #   - destination:
  #       host: demo-service
  #       port:
  #         number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: demo-service
        port:
          number: 8080
