istio-mylearning/docker-with-outboundtraffic/external-service-entry.yml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-jsonplaceholder
spec:
  hosts:
  - "jsonplaceholder.typicode.com"
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
